--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
 body {
     background-color: #f7f7f7f7;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 #title, .subtitle, .post_title {
+    color: #505050;
+}
+
+#title {
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+a {
+    text-decoration: line-through;
     color: #505050;
 }
 
@@ -28,8 +39,18 @@ body {
 .post_content {
     margin: 0;
     margin-bottom: 15px;
+    text-transform: capitalize;
 }
 
 .post_img {
     margin-bottom: 15px;
+}
+
+.contacts_list {
+    list-style-type: none;
+    padding-left: 15px;
+}
+
+.contacts_list li a{
+    text-decoration: none;
 }
